trying out things

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,5 +1,5 @@
 <header class="px-5p py-2">
-    <div class="uppercase flex items-center justify-between border-black border-b-2 py-2">
+    <div class="uppercase flex items-center justify-between py-2">
         <div class="shrink-0">
             <h2> Name of company </h2>
         </div>
