--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,7 +1,7 @@
-<header class="px-5p py-2">
+<header class="px-5p py-2 bg-gray-300">
     <div class="uppercase flex items-center justify-between py-2">
-        <div class="shrink-0">
-            <h2> Name of company </h2>
+        <div class="shrink-0 text-blue-500">
+            <h2 class="font-serif"> Hockeyfanatics </h2>
         </div>
         <nav class="space-x-9 mb-1">
             <a href=""> Nav 1 </a>
