--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <!-------------------- Footer ------------------->
-<footer class="md:flex text-center md:text-left items-end justify-between uppercase p-5p pt-0">
-    <div class="flex gap-10 justify-center md:justify-start">
+<footer class="md:flex text-center md:text-left bg-pink-200 items-end justify-between uppercase p-5p">
+    <div class="flex gap-10 justify-center md:justify-start font-sans">
         <div class="p-3">
             <h4 class="mb-2"> Lorem ipsum </h4>
             <nav class="text-sm">
@@ -24,6 +24,6 @@
     <form class="col-span-2 mt-3">
         <label for="name" class="tracking-widest"> Subscribe to our newsletter </label>
         <input id="name" name="name" type="text"  class="mt-3 border-black border">
-        <input type="submit" value="SUBSCRIBE"  class="bg-black mt-5 w-min ml-auto text-white cursor-pointer">
+        <input type="submit" value="SUBSCRIBE"  class="bg-gray-500 mt-5 w-min ml-auto text-white cursor-pointer">
     </form>
 </footer>
