--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,9 +1,9 @@
 <header class="px-5p py-2 bg-gray-300">
     <div class="uppercase flex items-center justify-between py-2">
-        <div class="shrink-0 text-blue-500">
-            <h2 class="font-serif"> Hockeyfanatics </h2>
+        <div class="shrink-0 text-pink-400">
+            <h2 class="font-serif"> Bunnies and friends </h2>
         </div>
-        <nav class="space-x-9 mb-1">
+        <nav class="space-x-9 mb-1 text-gray-500">
             <a href=""> Nav 1 </a>
             <a href=""> Nav 2 </a>
             <a href=""> Nav 3 </a>
