--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 
 
 <!-- SEO Meta Data -->
-<title>Document</title>
+<title> Bunnies and friends  </title>
 
 <!-- Stylesheets -->
 <link href="/assets/css/style.css" rel="stylesheet">
