--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,6 +486,9 @@ video {
 .basis-\[1px\] {
   flex-basis: 1px;
 }
+.basis-1\/3 {
+  flex-basis: 33.333333%;
+}
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -567,6 +570,10 @@ video {
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 .bg-pink-200 {
   --tw-bg-opacity: 1;
